# powerschool-sync

./: .gitignore  README.md  extract.py  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
plugin/: plugin-camden.xml  plugin-miami.xml  plugin-newark.xml
powerschool_sync/: extract.py
powerschool_sync/plugin/: plugin-camden.xml  plugin-newark.xml  plugin_template.xml
powerschool_sync/queries/ps_kippmiami_org/: assignment.json  attendance.json  full.json
powerschool_sync/queries/pskcna_kippnj_org/: assignment.json  attendance.json  filtered.json  full.json
powerschool_sync/queries/psteam_kippnj_org/: assignment.json  attendance.json  filtered.json  full.json
queries/pskcna_kippnj_org/: full.json
queries/psteam_kippnj_org/: contacts.json
tests/: test_powerschool_sync.py
