[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com"},
]
dependencies = [
    "google-cloud-storage>=2.1.0",
    "powerschool>=3.1.1"]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
    "black>=22.1.0",
    "flake8>=4.0.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
extract-nwk.cmd = "python powerschool_sync/extract.py"
extract-nwk.env_file = "powerschool_sync/envs/psteam_kippnj_org/.env"
extract-cmd.cmd = "python powerschool_sync/extract.py"
extract-cmd.env_file = "powerschool_sync/envs/pskcna_kippnj_org/.env"
extract-mia.cmd = "python powerschool_sync/extract.py"
extract-mia.env_file = "powerschool_sync/envs/ps_kippmiami_org/.env"
