[project]
name = ""
version = ""
description = ""
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
dependencies = ["google-cloud-storage>=2.1.0", "powerschool>=3.1.1"]
requires-python = ">=3.9"
license = { text = "MIT" }

[project.urls]
homepage = ""

[project.optional-dependencies]
[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
extract-nwk = { call = "powerschool_sync.extract:main", env_file = "env/psteam_kippnj_org.env" }
extract-cmd = { call = "powerschool_sync.extract:main", env_file = "env/pskcna_kippnj_org.env" }
extract-mia = { call = "powerschool_sync.extract:main", env_file = "env/ps_kippmiami_org.env" }
post_lock = { shell = "pdm export -f requirements -o requirements.txt" }
